force-app/main/default/objects/sf_devops__Test_Execution__c/sf_devops__Test_Execution__c.object-meta.xml
<CustomObject>
    <label>Test Execution</label>
    <nameField>
        <displayFormat>TE-{000000}</displayFormat>
        <label>Test Execution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Executions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>