force-app/main/default/objects/sf_devops__Test_Execution__c/fields/sf_devops__Line__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Line__c</fullName>
    <label>Start Line</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>