force-app/main/default/objects/sf_devops__Test_Execution__c/fields/sf_devops__Message__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Message__c</fullName>
    <label>Message</label>
    <length>100</length>
    <type>Text</type>
</CustomField>