force-app/main/default/objects/sf_devops__Test_Execution__c/fields/sf_devops__Report_URL__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Report_URL__c</fullName>
    <label>Test Report URL</label>
    <type>Url</type>
</CustomField>