force-app/main/default/objects/sf_devops__Test_Execution__c/fields/sf_devops__Result_Details__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Result_Details__c</fullName>
    <label>Result Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>