force-app/main/default/objects/sf_devops__Test_Execution__c/fields/sf_devops__Sample_Code__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Sample_Code__c</fullName>
    <label>Sample Code</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>