force-app/main/default/objects/sf_devops__Test_Execution__c/fields/sf_devops__Test__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Test__c</fullName>
    <label>Test</label>
    <referenceTo>sf_devops__Test__c</referenceTo>
    <relationshipLabel>Test Executions</relationshipLabel>
    <relationshipName>Test_Executions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>