force-app/main/default/objects/sf_devops__Test_Execution__c/fields/sf_devops__Test_Suite_Execution__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Test_Suite_Execution__c</fullName>
    <label>Test Suite Execution</label>
    <referenceTo>sf_devops__Test_Suite_Execution__c</referenceTo>
    <relationshipLabel>Test Executions</relationshipLabel>
    <relationshipName>Test_Executions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>