force-app/main/default/objects/sf_devops__Test_Execution__c/listViews/sf_devops__All.listView-meta.xml
<ListView>
    <fullName>sf_devops__All</fullName>
    <columns>NAME</columns>
    <columns>sf_devops__Result__c</columns>
    <columns>sf_devops__Severity__c</columns>
    <columns>sf_devops__Test__c</columns>
    <columns>sf_devops__Test_Suite_Execution__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>